fix spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -1182,7 +1182,7 @@ a {
 	font-size: var(--fs-xl);
 	font-weight: var(--fw-med);
 	margin: 0 0 1em 0;
-	width: 110%;
+	width: 130%;
 }
 
 .research-title {
